# ErrorImage

./: CMakeLists.txt  README.md
GCLF-Geometry/: CMakeLists.txt
GCLF-Geometry/AABB/: AABBNode.h  AABBTraits.h  AABBTree.h  AABBTree_impl.h
GCLF-Geometry/Basic/: BoundingBox.cpp  BoundingBox.h  BoundingBox3i.cpp  BoundingBox3i.h  SimpleTypes.h  Triangle.cpp  Triangle.h  Vector2d.h  Vector2i.h  Vector2u.h  Vector3d.h  Vector3i.h  Vector3u.h
GCLF-Geometry/Curved/: BezierCommon.h  BezierCurve.cpp  BezierCurve.h  BezierTriangle.cpp  BezierTriangle.h  BezierTriangleInjectivityChecker.cpp  BezierTriangleInjectivityChecker.h
GCLF-Geometry/Exact/: IEEE754Union.h  Predicates.cpp  Predicates.h
GCLF-ImageTriSimp/: CMakeLists.txt  ParamParser.cpp  ParamParser.h  config.json  main.cpp
GCLF-ImageTriSimp/ColorAndError/: CalcColorOnFace.h  CalcColorOnFace_impl.h  CalcErrorOnFace.h  CalcErrorOnFace_impl.h  CalcErrorOnMesh.h  CalcErrorOnMesh_impl.h  ColorMap.cpp  ColorMap.h  MeshToImage.h  MeshToImage_impl.h
GCLF-ImageTriSimp/CurvedSimplification/: BezierCurveTree.cpp  BezierCurveTree.h  CAssignPixelsToFace.cpp  CAssignPixelsToFace.h  CCheckConstraints.cpp  CCheckConstraints.h  CTopoOperations.cpp  CTopoOperations.h  CurvedSimplifier.cpp  CurvedSimplifier.h  DE_COptimizer.cpp  DE_COptimizer.h
GCLF-ImageTriSimp/CurvedSimplification/LocalOperations/: CBoundaryEdgeCollapser.cpp  CBoundaryEdgeCollapser.h  CBoundaryVertexCollapser.cpp  CBoundaryVertexCollapser.h  CEdgeCollapser.cpp  CEdgeCollapser.h  CEdgeFlipper.cpp  CEdgeFlipper.h  CEdgeRelocater.cpp  CEdgeRelocater.h  CLocalOperation.cpp  CLocalOperation.h  CVertexRelocater.cpp  CVertexRelocater.h
GCLF-ImageTriSimp/Image/: ImageDefinition.cpp  ImageDefinition.h
GCLF-ImageTriSimp/LinearSimplification/: DE_LOptimizer.cpp  DE_LOptimizer.h  LAssignPixelsToFace.cpp  LAssignPixelsToFace.h  LCheckConstraints.cpp  LCheckConstraints.h  LTopoOperations.cpp  LTopoOperations.h  LinearSimplifier.cpp  LinearSimplifier.h  SegmentTree.cpp  SegmentTree.h
GCLF-ImageTriSimp/LinearSimplification/LocalOperations/: LBoundaryEdgeCollapser.cpp  LBoundaryEdgeCollapser.h  LBoundaryVertexCollapser.cpp  LBoundaryVertexCollapser.h  LEdgeCollapser.cpp  LEdgeCollapser.h  LEdgeFlipper.cpp  LEdgeFlipper.h  LEdgeSplitter.cpp  LEdgeSplitter.h  LFaceSplitter.cpp  LFaceSplitter.h  LLocalOperation.cpp  LLocalOperation.h  LVertexRelocater.cpp  LVertexRelocater.h
GCLF-ImageTriSimp/Mesh/: BezierFaceDefinition.cpp  BezierFaceDefinition.h  BezierMeshDefinition.cpp  BezierMeshDefinition.h  BezierMeshVisualization.cpp  BezierMeshVisualization.h  LinearMeshDefinition.cpp  LinearMeshDefinition.h  OMUtils.h  OperationsRecorder.cpp  OperationsRecorder.h
GCLF-ImageTriSimp/Predicates2D/: Predicates2D.cpp  Predicates2D.h
GCLF-ThirdPartyLibs/: CMakeLists.txt
GCLF-ThirdPartyLibs/HLBFGS/: CMakeLists.txt  HLBFGS.cpp  HLBFGS.h
GCLF-ThirdPartyLibs/OpenMesh/: CMakeLists.txt
GCLF-ThirdPartyLibs/OpenMesh/src/OpenMesh/Apps/Unsupported/Streaming-qt4/Client/: QGLViewerWidget.cc
GCLF-ThirdPartyLibs/OpenMesh/src/OpenMesh/Apps/Unsupported/Streaming/Client/: QGLViewerWidget.cc
GCLF-ThirdPartyLibs/OpenMesh/src/OpenMesh/Core/IO/importer/: BaseImporter.hh  ImporterT.hh
GCLF-ThirdPartyLibs/OpenMesh/src/OpenMesh/Core/IO/reader/: OBJReader.cc  OBJReader.hh  OFFReader.cc  OFFReader.hh  PLYReader.cc  STLReader.cc
GCLF-ThirdPartyLibs/OpenMesh/src/OpenMesh/Core/Mesh/: PolyMeshT.hh  PolyMeshT_impl.hh  SmartHandles.cc  SmartHandles.hh
GCLF-Utils/: CMakeLists.txt
GCLF-Utils/Logger/: Logger.cpp  Logger.h
GCLF-Utils/SFINAE/: SFINAE.h
GCLF-Utils/Utils/: Marker.cpp  Marker.h  Traversal.cpp  Traversal.h
example/: curved_simplify.bat  error_bounded.bat  linear_simplify.bat
